# T-Display-ESP32---Oxygen-Display

./: LICENSE  README.md
O2_display/: CMakeLists.txt  LV_Helper.cpp  O2_display.ino  O2_display.sll  O2_display.spj  filelist.txt  ui.c  ui.h  ui_Screen1.c  ui_Screen1.h  ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_label1.c  ui_comp_label1.h  ui_events.h  ui_font_MontserratMedium48.c  ui_font_MontserratSemiBold60.c  ui_font_MontserratSemiBold72.c  ui_font_MontserratSemibold30.c  ui_helpers.c  ui_helpers.h
O2_display/assets/fonts/: O2_displayH.sll  O2_displayH.spj
O2_display/assets/fonts/assets/: ui_font_MontserratMedium48.fcfg  ui_font_MontserratMedium60.c  ui_font_MontserratMedium60.fcfg  ui_font_MontserratSemiBold60.fcfg  ui_font_MontserratSemiBold72.fcfg  ui_font_MontserratSemibold20.c  ui_font_MontserratSemibold20.fcfg  ui_font_MontserratSemibold30.fcfg
O2_display/assets/fonts/components/: Label1.ecomp
